...
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/signupToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/nameInput"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:hint="Username"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/signupTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/signupEmailInput"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/nameInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/signupPasswordInput"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/signupEmailInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/confirmPasswordInput"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:hint="Confirm Password"
        android:inputType="textPassword"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Attendee"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/organizerRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="Organizer"/>
    </RadioGroup>

    <Button
        android:id="@+id/signupConfirmButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:text="Sign Up"
        android:textSize="18sp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="24dp"
...
