...
            android:background="?attr/colorPrimary"
            app:navigationIcon="@drawable/ic_back"
            app:title="Create an Event"
            app:titleTextColor="@android:color/white" />

        <EditText
            android:id="@+id/eventTitleSetter"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            android:hint="Event Name" />

        <!-- Icon URL and Upload Button -->
...
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="Set Capacity:"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/eventCapacitySetter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:hint="50"
                android:inputType="number"/>

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <Button
            android:id="@+id/eventCreationConfirm"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="5dp"
            android:text="Create Event"
            android:textSize="18sp" />
    </LinearLayout>
...
